<resources>
    <string name="app_name">FasterFood</string>

    <!--Splash-->
    <string name="loading">App is loading</string>
    <string name="first_string">Wherever you are</string>
    <string name="second_string">Order Food!</string>
    <string name="content_desc1">Logo</string>

    <!--Messaggi per Credenziali-->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="my_email">Your e-mail</string>

    <!--Messaggi di LogIn-->
    <string name="login_name">Faster Food Login</string>
    <string name="action_log_in">Log In</string>
    <string name="register">No account yet? Register now!</string>
    <string name="forgotpw">Forgot password?</string>
    <string name="remember_password">Remember me</string>
    <string name="pass_reset">A password reset e-mail has been sended to</string>

    <!--Messaggi logout-->
    <string name="logged_out">Now you\'re logged out</string>
    <string name="logged_in">Now you\'re logged in</string>

    <!--Messaggi di SignUp-->
    <string name="sign_up_name">Faster Food Sign Up</string>
    <string name="my_password">Password (min 6 alphanumerical characters)</string>
    <string name="show_password">Show password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="signed_up">Now you are registered \nEnjoy your meal with FasterFood!</string>
    <string name="ok">ok</string>

    <!--Messaggi di Errore-->
    <string name="error_invalid_email">E-mail address is not valid</string>
    <string name="error_invalid_password">Password too short</string>
    <string name="error_incorrect_password">Password not correct</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_password">Password is not been inserted</string>
    <string name="error_email">E-mail address is not been inserted</string>
    <string name="error_password_problem">Try Again. A problem with the server occurred</string>
    <string name="error_user_not_logged">User is not logged in.</string>

    <!--Drawer-->
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="closed_drawer">Close Navigation Drawer</string>
    <string name="home_settings" translatable="false">Home</string>
    <string name="orders_settings">Orders</string>
    <string name="locals_settings">Visited locals</string>
    <string name="other_settings">Other</string>
    <string name="login_settings">Login</string>
    <string name="account_settings">Account Settings</string>
    <string name="guest_string">Guest</string>
    <string name="guest_notification">Please login to start ordering</string>
    <string name="app_logo">app logo</string>

    <!--Home_Activity-->
    <string name="search_hint">Find City</string>
    <string name="spinner_label">Select chain</string>
    <string name="local_logo">Local Logo</string>
    <string name="menu">Menu</string>
    <string name="order_error">You need to log in to view your orders</string>

    <!--Restaurant_detail-->
    <string name="score">Score</string>
    <string name="opened_now">Open now</string>
    <string name="closed_now">Closed Now</string>

    <plurals name="numberReviews">
        <item quantity="one">Based on %d review</item>
        <item quantity="other">Based on %d reviews</item>
    </plurals>

    <!-- SearchFragment -->
    <string name="all_chains">All chains</string>

    <!-- Elementi Order -->
    <string name="orders_title">My orders</string>
    <string name="orders_subtitle">No filter applied</string>
    <string name="orders_filter">Filter »</string>
    <string name="orders_editbtn">Edit</string>
    <string name="contentDescLogo">Chain Logo</string>
    <string name="orders_error">No orders to display</string>
    <string name="edit">Edit Order</string>
    <string name="view_order">View order</string>
    <string name="send_order">Send order</string>
    <string name="state">State:&#160;</string>
    <string name="locale">Local:&#160;</string>
    <string name="order_subtitle_first_only">Results with state:</string>
    <string name="order_subtitle_second_only">Results for chain:</string>
    <string name="order_subtitle_both">, chain: </string>
    <string name="active_notification_settings">Active notification from Account Settings to get review notification</string>
    <string name="sort_message_order">Orders sorted by date</string>

    <!-- Elementi Filter order -->
    <string name="shared_pref_filter_name">filter_pref</string>
    <string name="shared_pref_first_check">FIRST_CHECK</string>
    <string name="shared_pref_second_check">SECOND_CHECK</string>
    <string name="state_Filter">Filter by order state</string>
    <string name="chain_Filter">Orders chain filter</string>
    <string name="no_filter">No filter</string>
    <string name="open_state">Open</string>
    <string name="closed_state">Closed</string>
    <string name="filter_btn">Save filters</string>

    <!-- Elementi Locals-->
    <string name="shared_pref_locals_name">locals_pref</string>
    <string name="shared_pref_key_value">LOCALS_SET</string>
    <string name="no_local_screen">No local to display</string>
    <string name="sort_message_locals">Locals sorted by visit frequency</string>

    <!--Menù-->
    <string name="euro" translatable="false">€</string>
    <string name="quantita">Q.ty : </string>

    <string-array name="numberOfQuantity">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="purchase">Purchase it</string>

    <!-- Summary -->
    <string name="avaiability">Available</string>
    <string name="book_seats">Seats to book:</string>
    <string name="question_seat">Would you like to book a seat?</string>
    <string name="error_zero_seats">Choose at least one seat</string>
    <string name="dialog_negative">No</string>
    <string name="dialog_positive">Yes</string>
    <string name="dialog_question">Are you sure to pay?</string>
    <string name="order_done">You\'re order has been saved!</string>

    <!--DB URL-->
    <string name="db_connected">https://earnest-star-132315.firebaseio.com/.info/connected</string>
    <string name="db_locals">https://earnest-star-132315.firebaseio.com/Locali</string>
    <string name="db_chains">https://earnest-star-132315.firebaseio.com/Categorie</string>
    <string name="db_cities">https://earnest-star-132315.firebaseio.com/Citta</string>
    <string name="db_menus">https://earnest-star-132315.firebaseio.com/Menu/</string>
    <string name="db_orders">https://earnest-star-132315.firebaseio.com/Ordini</string>
    <string name="mc_logo">gs://earnest-star-132315.appspot.com/logos/mcdonalds.png</string>
    <string name="burger_logo">gs://earnest-star-132315.appspot.com/logos/burgerking.png</string>
    <string name="bacio_logo">gs://earnest-star-132315.appspot.com/logos/baciodilatte.png</string>
    <string name="menu_address">gs://earnest-star-132315.appspot.com/menu/</string>
    <string name="mc_name">mc</string>
    <string name="burger_name">burger</string>
    <string name="bacio_name">bacio</string>
    <string name="mcdonalds">McDonald\'s</string>
    <string name="baciodilatte">Bacio di Latte</string>
    <string name="burgerking">Burger King</string>
    <string name="all_chain_logo">gs://earnest-star-132315.appspot.com/logos/allchain.png</string>
    <string name="allchain_name">all</string>


    <!--Elementi Settings-->
    <string name="shared_pref_notification">NOTIFICATION_SET</string>
    <string name="shared_pref_chains">SPINNER_CHAIN</string>
    <string name="shared_pref_cities">CITY_FAV</string>
    <string name="shared_pref_name">settings_prefs</string>
    <string name="pass_btn_change">Change</string>
    <string name="pass_btn_save">Save</string>
    <string name="notification_on">Active</string>
    <string name="notification_off">Not active</string>
    <string name="pass_confirm">Correct password, type a new one</string>
    <string name="new_pass">Type new password</string>
    <string name="pass_changed">Password changed</string>
    <string name="pass_hint">Type old password</string>
    <string name="pass_wrong">Wrong password!</string>
    <string name="change_psw_set">Change password</string>
    <string name="change_notification">On/Off Notification</string>
    <string name="change_city">Favourite City</string>
    <string name="change_chain">Favourite Chain</string>
    <string name="settings_title">Change settings</string>
    <string name="no_city_selected">No cities selected</string>
    <string name="wrong_city_selected">Wrong city selected. Try to choose an item from the list. The remaining settings have been saved</string>
    <string name="saved_settings">Settings saved successfully</string>
    <string name="city_field_required">Wrong city</string>

    <!--Summary-->
    <string name="quantity">Quantity: </string>
    <string name="price">Price: </string>
    <string name="totale">Total:&#160;&#160;</string>
    <string name="closed">You cannot order now. This local is currently closed</string>
    <string name="not_logged">You need to log in to order</string>
    <string name="not_connected">You need a network connection to order. Please connect to a network</string>

    <!--Payment-->
    <string name="payment_done">Payment done. Thanks for using FasterFood!</string>

    <!--Notification-->
    <string name="contex_text_notification_ff">Share your pleasure, review your restaurant!</string>
    <string name="title_notification_ff">FasterFood</string>

    <!--User Review-->
    <string name="review_title">Review your restaurant</string>
    <string name="btn_submit">Submit</string>
    <string name="review_done">Thanks for your review!</string>
    <string name="review_error">You have not voted</string>
    <string name="food_quality">Food quality:</string>
    <string name="service">Local service:</string>
    <string name="waiting_time">Waiting time:</string>

    <string name="nfc_hint">Touch the registry to pay </string>
    <string name="nfc_beam_enabled">Ensure you enabled Android Beam</string>

    <string name="pay_now">Pay now</string>
    <string name="pay_registry">Pay to registry</string>
    <string name="order_list">Order&#160;</string>
    <string name="no_connection">Network error or no connection, please retry</string>
    <string name="atLeastOneProduct">Please select at least one product</string>
</resources>
